network-policies/online-boutique/emailservice-l4-rule.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "emailservice-l4-rule"
  namespace: web
spec:
  endpointSelector:
    matchLabels:
      app: emailservice
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: checkoutservice
      toPorts:
        - ports:
            - port: "5000"
        - ports:
            - port: "8080"
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toCIDRSet:
        - cidr: 169.254.169.254/32
    - toFQDNs:
        - matchPattern: "*.googleapis.com"
      toPorts:
        - ports:
            - port: "443"
        - ports:
            - port: "80"
    - toEndpoints:
        - matchLabels:
            app: checkoutservice
