network-policies/online-boutique/recommendationservice-l4-rule.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "recommendationservice-l4-rule"
  namespace: web
spec:
  endpointSelector:
    matchLabels:
      app: recommendationservice
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: productcatalogservice  
    - fromEndpoints:
        - matchLabels:
            app: frontend
      toPorts:
        - ports:
            - port: "8080"
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toCIDRSet:
        - cidr: 169.254.169.254/32
    - toFQDNs:
        - matchPattern: "*.googleapis.com"
      toPorts:
        - ports:
            - port: "443"
        - ports:
            - port: "80"
    - toEndpoints:
        - matchLabels:
            app: productcatalogservice
      toPorts:
        - ports:
            - port: "3550"
    - toEndpoints:
        - matchLabels:
            app: frontend
